# tally

./: .bazelignore  .bazelrc  .gitignore  .prettierrc.yaml  BUILD.bazel  Gruntfile.js  MODULE.bazel  README.md  WORKSPACE.bazel  build.gradle  js_summary.html  karma.conf.js  package-lock.json  package.json  package.json.orig  pnpm-lock.yaml  pnpm-lock.yaml.orig  pnpm-workspace.yaml  tsconfig.json  webpack.config.cjs  webpack.config.js
client/: package-lock.json  package.json
client/cli/: .env  .gitignore  BUILD.bazel  README.md  esbuild.config.mjs  generate_test.sh  package-lock.json  package.json  tsconfig.json
client/cli/data/: External.yaml
client/cli/src/: cli.ts
client/cli/src/commands/: generate.ts  generate.ts.orig  report.ts  transactions.ts  unaccounted.ts
client/hbs/: .eslintignore  .eslintrc.yml  .prettierrc.yaml  BUILD.bazel  README.md  codegen.yml  eslint.config.mjs  index.html  jasmine.json  jest.config.ts  jest_config.json  js_summary.html  karma.conf.js  package-lock.json  package.json  tsconfig-for-webpack-config.json  tsconfig.json  webpack.config.cjs  webpack.config.ts
client/hbs/js/: api.ts  base.ts  cell.ts  cell_test.ts  gql_types.ts  gql_utils.ts  gql_utils_test.ts  index.ts  jetty_utils.ts  row.ts  style.css  utils.ts  utils_test.ts
client/hbs/js/__snapshots__/: utils_test.ts.snap
client/hbs/src/: account-tooltiip.ts  account-tooltip.ts  api.ts  balance-summary-tooltip.ts  balance-tooltip.ts  base.ts  cell.test.ts  cell.ts  format.test.ts  format.ts  gql_types.ts  gql_utils.test.ts  gql_utils.ts  index.ts  row.ts  style.css  summary-table.ts  tally-app.ts  utils.test.ts  utils.ts
client/hbs/src/__snapshots__/: utils.test.ts.snap
client/hbs/src/components/: account-tooltip.ts  balance-summary-tooltip.ts  balance-tooltip.ts  expand-button.ts  summary-table.ts  tally-app.ts
client/hbs/templates/: account-tooltip.hbs  balance-summary-tooltip.hbs  balance-tooltip.hbs
client/hbs/templates/helpers/: currency.ts  dateFormat.ts  incremented.ts  isProjected.ts
client/js/: index.ts  row.ts  style.css  utils.ts
client/templates/: balance-summary-tooltip.hbs
client/templates/helpers/: currency.ts
data/: Gas.yaml  _config.yaml
js/: account.js  base.ts  builder.js  handlebars.ts  handlebars_helpers.ts  index.ts  loader.js  month.js  style.css  templates.js  utils.ts  utils_test.ts
lib/: .gitignore  BUILD.bazel  README.md  jest.config.ts  jest_config.cjs  jest_config.json  package-lock.json  package.json  tsconfig.json
lib/src/: index.ts  utils.test.ts  utils.ts
lib/src/core/: account.test.ts  account.ts  balance.test.ts  balance.ts  budget.test.ts  budget.ts  month.test.ts  month.ts  transfer.test.ts
lib/src/data/: config.test.ts  config.ts  config.ts.orig  loader.test.ts  loader.ts  loader.ts.orig  loader_yaml.test.ts  loader_yaml.test.ts.orig  loader_yaml.ts  loader_yaml.ts.orig
lib/src/data/__snapshots__/: loader.test.ts.snap
lib/src/statement/: statement.test.ts  statement.ts  summary.test.ts  summary.ts  transaction.test.ts  transaction.ts
lib/src/statement/__snapshots__/: transaction.test.ts.snap
server/apollo/: .env  .env.test  .eslintignore  .eslintrc  BUILD.bazel  README.md  esbuild.config.mjs  esbuild.mjs  eslint.config.mjs  jest.config.ts  jest_config.js  jest_config.json  package-lock.json  package.json  tsconfig.json  tsconfig.json.orig  webpack.common.js  webpack.development.cjs  webpack.development.js  webpack.production.cjs
server/apollo/src/: main.ts  query-statement.ts  query-summary.ts  query-table.ts  resolvers.test.ts  resolvers.ts  to-gql.ts  type-defs.ts  types.d.ts
server/apollo/src/__snapshots__/: resolvers.test.ts.snap
server/apollo/src/core/: account.test.ts  account.ts  balance.test.ts  balance.ts  budget.test.ts  budget.ts  month.test.ts  month.ts  statement.ts  summary_statement.ts  transaction.ts  transfer.ts
server/apollo/src/data/: config.test.ts  config.ts  loader.test.ts  loader.ts  loader_yaml.test.ts  loader_yaml.ts
server/apollo/src/statement/: statement.test.ts  statement.ts  summary.test.ts  summary.ts  summary_statement.ts  transaction.test.ts  transaction.ts
server/apollo/src/testdata/tally/: External.yaml  Gas.yaml  Phone.yaml
server/express/: .env  README.md  package-lock.json  package.json  tsconfig.json
server/express/src/: index.ts
server/express/src/middleware/: checks.ts  error_handlers.ts  index.ts
server/express/src/services/search/: routes.test.ts  routes.ts  search_controller.ts
server/express/src/services/search/providers/: open_cage_data_provider.test.ts  open_cage_data_provider.ts
server/express/src/utils/: error_handler.ts
server/jetty/: build.gradle
server/jetty/src/main/java/tally/: BudgetHandler.java  Main.java  ServletConfig.java
server/jetty/src/resources/: logback.groovy
server/kt/: README.md  build.gradle.kts  gradle.properties  run.sh  settings.gradle.kts
server/kt/gradle/: libs.versions.toml
server/kt/src/main/kotlin/: Application.kt  Routing.kt  StatementService.kt  SummaryService.kt  TableService.kt  Utils.kt
server/kt/src/main/kotlin/core/: Account.kt  Balance.kt  Budget.kt  Month.kt  Transfer.kt
server/kt/src/main/kotlin/data/: Loader.kt  LoaderYaml.kt  PathWatcher.kt
server/kt/src/main/kotlin/schema/: GqlData.kt  (+6 more)
server/kt/src/main/resources/: application.yaml  logback.xml
server/kt/src/test/kotlin/: ApplicationTest.kt  UtilsTest.kt
server/kt/src/test/resources/: logback-test.xml
src/main/java/tally/: Main.java  Processor.java
src/main/java/tally/core/: Account.java  Balance.java  BudgetException.java  MissDatedBalanceException.java  Transfer.java
src/main/java/tally/json/: JsonData.java  JsonResponse.java
src/main/java/tally/load/: FileScanner.java  LoadException.java  RecursiveFileScanner.java
src/main/java/tally/statement/: SummaryStatement.java  SummaryStatementTableBuilder.java  Transaction.java
src/resources/: logback.groovy
templates/: account-tooltip.hbs  balance-summary-tooltip.hbs  balance-tooltip.hbs  summary.hbs  transfer-matrix.hbs
templates/helpers/: incremented.ts  isProjected.ts
(+156 files in other folders)
