# These come from central repository
# https://github.com/bazelbuild/bazel-central-registry

module(name = "tally")

###############################################################################
# https://registry.bazel.build/modules/aspect_rules_esbuild
# Works for 0.16.0 (Nov 2023) but not 0.18+ (likely depends on rules_ts 3.x)
bazel_dep(name = "aspect_rules_esbuild", version = "0.16.0")
# bazel_dep(name = "aspect_rules_esbuild", version = "0.25.0")

###############################################################################
# https://registry.bazel.build/modules/aspect_rules_jest
bazel_dep(name = "aspect_rules_jest", version = "0.19.6")
# bazel_dep(name = "aspect_rules_jest", version = "0.24.3")

###############################################################################
# https://registry.bazel.build/modules/aspect_rules_ts
# https://github.com/aspect-build/rules_ts
# Works for 2.4.2 (Jun 2024) but not 3.x, latest is 3.8.3
bazel_dep(name = "aspect_rules_ts", version = "2.4.2")
# bazel_dep(name = "aspect_rules_ts", version = "3.5.3")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

###############################################################################
# https://registry.bazel.build/modules/aspect_rules_js
# Works for 1.34.1 (Nov 2023) but not 1.42.3, latest is 2.9.2
bazel_dep(name = "aspect_rules_js", version = "1.34.1")
# bazel_dep(name = "aspect_rules_js", version = "2.0.2")

###############################################################################
# https://registry.bazel.build/modules/rules_nodejs
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "6.3.0")


node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.2.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")
