load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])


ts_project(
    name = "lib",
    srcs = glob([
            "src/**/*.ts",
        ], exclude = ["src/**/*.test.ts"]),
    declaration = True,
    declaration_map = True,
    composite = True,
    tsconfig = ":tsconfig.json",
    validate = True,  # Checks that tsconfig matches this target.
    deps = [
    ],
)

npm_package(
    name = "tally_lib",
    srcs = [
        "package.json",
        ":lib",
    ]
)
