load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "cli_project",
    srcs = glob([
        "src/**/*.ts",
    ]),
    transpiler = "tsc",
    tsconfig = ":tsconfig.json",
    validate = True,  # Checks that tsconfig matches this target.
    deps = [
        ":node_modules/@types/node",
        ":node_modules/@types/yargs",
        ":node_modules/dotenv",
        ":node_modules/yargs",
        "//:tally_lib",
    ],
)

js_binary(
    name = "tally_cli",
    # Run from package directory so to pick up .env file.
    chdir = package_name(),  # in this case it will be "client/cli".
    data = [
        ".env",
        ":cli_project",
    ],
    entry_point = "src/cli.js",
    env = {
        # BUILD_WORKSPACE_DIRECTORY is set by Bazel to the root of the workspace,
        # but only for build and run actions. We need to set it manually for tests.
        "TALLY_FILES": "$$BUILD_WORKSPACE_DIRECTORY/data",
        "NODE_OPTIONS": "--es-module-specifier-resolution=node",
    },
)

filegroup(
    name = "data",
    srcs = glob(["data/**/*"]),
)

sh_test(
    name = "generate_test",
    size = "small",
    srcs = ["generate_test.sh"],
    data = [":tally_cli", ":data"],
)

