load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "cli_project",
    srcs = glob([
        "src/**/*.ts",
    ]),
    transpiler = "tsc",
    tsconfig = ":tsconfig.json",
    validate = True,  # Checks that tsconfig matches this target.
    deps = [
        ":node_modules/@types/node",
        ":node_modules/@types/yargs",
        ":node_modules/dotenv",
        ":node_modules/yargs",
        "//:tally_lib",
    ],
)

esbuild(
    name = "cli_bundle",
    config = "esbuild.config.mjs",
    entry_point = "src/cli.ts",
    format = "esm",
    output = "cli_bundle.mjs",
    platform = "node",
    sourcemap = "external",  # to easily diff against other files
    target = "esnext",
    deps = [":cli_project"],
)

js_binary(
    name = "tally_cli",
    data = [
        ":cli_bundle",
        "//client/hbs:bundle",
    ],
    entry_point = "cli_bundle.mjs",
    env = {
        "TALLY_FILES": "$$BUILD_WORKSPACE_DIRECTORY/data",
    },
)

filegroup(
    name = "data",
    srcs = glob(["data/**/*"]),
)

sh_test(
    name = "generate_test",
    size = "small",
    srcs = ["generate_test.sh"],
    data = [":tally_cli", ":data"],
)

